Integrating Eureka Server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-spring.application.name=UserAuthenticationService_May
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/userauthenticationservice_may2024
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
-server.port=9000
+
 logging.level.org.springframework.security=trace
+
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=userservice
+server.port=${SERVER_PORT}
+
